nGrid added html generator, navigation

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-.tmp
-.idea
-.sass-cache
-assets/js/components
-node_modules
-build
+Access
+.idea/
+.sass-cache/
+.tmp/
+assets/js/components/
+assets/img/social-*.png
+assets/img/sprite-*.png
+node_modules/
+public/
+dev/
+build/
+
+npm-debug.log
+atlassian-ide-plugin.xml
