--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,15 @@
 {
-  "name": "nGrid TerminalWMS",
-  "version": "0.1.1",
+  "name": "nGrid_TerminalWMS",
+  "version": "0.0.2",
   "dependencies": {
-    "jquery": "2.1.1",
-    "angular": "1.3.3"
+    "jquery": "~2.1.1",
+    "angular": "~1.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+
+  },
   "resolutions": {
-    "angular": ">= 1.3.3"
+    "angular": ">= 1.3",
+    "jquery": ">= 2.1.1"
   }
 }
