--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TWMS",
+  "name": "nGrid_TerminalWMS",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,12 +7,15 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "connect-history-api-fallback": "0.0.5",
     "del": "^0.1.3",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-cached": "^1.0.1",
     "gulp-changed": "^1.0.0",
+    "gulp-coffee": "^2.2.0",
     "gulp-concat": "^2.4.1",
+    "gulp-connect": "^2.2.0",
     "gulp-ext-replace": "^0.1.0",
     "gulp-filter": "^1.0.2",
     "gulp-imagemin": "^1.1.0",
@@ -23,6 +26,8 @@
     "gulp-minify-html": "^0.1.6",
     "gulp-notify": "^2.0.0",
     "gulp-plumber": "^0.6.6",
+    "gulp-preprocess": "^1.2.0",
+    "gulp-print": "^1.1.0",
     "gulp-rev": "^2.0.1",
     "gulp-rev-replace": "^0.3.1",
     "gulp-ruby-sass": "^0.7.1",
