--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,21 @@
   "name": "nGrid_TerminalWMS",
   "version": "0.0.2",
   "dependencies": {
-    "jquery": "~2.1.1",
-    "angular": "~1.3"
+	  "jquery": "~2.1.1",
+	  "angular": "~1.3",
+	  "angular-bootstrap": "~0.12.0"
   },
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "resolutions": {
     "angular": ">= 1.3",
     "jquery": ">= 2.1.1"
-  }
+  },
+	"overrides": {
+		"angular-bootstrap": {
+			"main": [
+				"ui-bootstrap.js",
+				"ui-bootstrap-tpls.js"
+			]
+		}
+	}
 }
