--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,12 @@
   "name": "nGrid_TerminalWMS",
   "version": "0.0.2",
   "dependencies": {
-	  "jquery": "~2.1.1",
-	  "angular": "~1.3",
-	  "angular-bootstrap": "~0.12.0"
+	  "jquery": "2.1.1",
+	  "angular": "1.3.15"
   },
   "devDependencies": {},
   "resolutions": {
-    "angular": ">= 1.3",
+    "angular": ">= 1.3.15",
     "jquery": ">= 2.1.1"
-  },
-	"overrides": {
-		"angular-bootstrap": {
-			"main": [
-				"ui-bootstrap.js",
-				"ui-bootstrap-tpls.js"
-			]
-		}
-	}
+  }
 }
