--- a/package.json
+++ b/package.json
@@ -1,40 +1,41 @@
 {
-  "name": "nGrid_TerminalWMS",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "start": "node app"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "connect-history-api-fallback": "0.0.5",
-    "del": "^0.1.3",
-    "gulp": "^3.8.8",
-    "gulp-autoprefixer": "^1.0.1",
-    "gulp-cached": "^1.0.1",
-    "gulp-changed": "^1.0.0",
-    "gulp-coffee": "^2.2.0",
-    "gulp-concat": "^2.4.1",
-    "gulp-connect": "^2.2.0",
-    "gulp-ext-replace": "^0.1.0",
-    "gulp-filter": "^1.0.2",
-    "gulp-imagemin": "^1.1.0",
-    "gulp-install": "^0.2.0",
-    "gulp-jade": "^0.9.0",
-    "gulp-load-plugins": "^0.7.0",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-minify-html": "^0.1.6",
-    "gulp-notify": "^2.0.0",
-    "gulp-plumber": "^0.6.6",
-    "gulp-preprocess": "^1.2.0",
-    "gulp-print": "^1.1.0",
-    "gulp-rev": "^2.0.1",
-    "gulp-rev-replace": "^0.3.1",
-    "gulp-ruby-sass": "^0.7.1",
-    "gulp-sourcemaps": "^1.2.4",
-    "gulp-uglify": "^1.0.1",
-    "gulp-useref": "^1.0.2",
-    "gulp-util": "^3.0.1",
-    "main-bower-files": "^2.1.0"
-  }
+	"name": "nGrid",
+	"version": "0.0.2",
+	"private": true,
+	"scripts": {
+		"start": "node app"
+	},
+	"dependencies": {},
+	"devDependencies": {
+		"connect-history-api-fallback": "0.0.5",
+		"del": "^0.1.3",
+		"gulp": "^3.8.8",
+		"gulp-autoprefixer": "^1.0.1",
+		"gulp-cached": "^1.0.1",
+		"gulp-changed": "^1.0.0",
+		"gulp-coffee": "^2.2.0",
+		"gulp-concat": "^2.4.1",
+		"gulp-connect": "^2.2.0",
+		"gulp-ext-replace": "^0.1.0",
+		"gulp-filter": "^1.0.2",
+		"gulp-imagemin": "^1.1.0",
+		"gulp-install": "^0.2.0",
+		"gulp-jade": "^0.9.0",
+		"gulp-load-plugins": "^0.7.0",
+		"gulp-minify-css": "^0.3.11",
+		"gulp-minify-html": "^0.1.6",
+		"gulp-notify": "^2.0.0",
+		"gulp-plumber": "^0.6.6",
+		"gulp-preprocess": "^1.2.0",
+		"gulp-print": "^1.1.0",
+		"gulp-rev": "^2.0.1",
+		"gulp-rev-replace": "^0.3.1",
+		"gulp-stylus": "^1.3.4",
+		"gulp-sourcemaps": "^1.2.4",
+		"gulp-uglify": "^1.0.1",
+		"gulp-useref": "^1.0.2",
+		"gulp-util": "^3.0.1",
+		"main-bower-files": "^2.1.0",
+		"nib": "^1.0.4"
+	}
 }
